# gerry_research

./: LICENSE  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
data/: early_access.xlsx  ex_early_access.xlsx  mmo.xlsx  sports.xlsx
gerry_research/: __main__.py  cleaner.py  collector.py  constants.py  exporter.py
output/: Thesis analysis v3.xlsx
