[tool.poetry]
name = "gerry_research"
version = "0.1.0"
description = ""
authors = ["Sharlon Regales"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.2"
openpyxl = "^3.0.10"
xlsx2csv = "^0.7.8"

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
